@@ -1,3 +1,9 @@
+Fri Feb 14 18:38:46 2014  Eric Wong  <e@80x24.org>
+
+	* string.c (rb_str_format_m): trade volatile for RB_GC_GUARD
+	  RB_GC_GUARD meaning is clear and has better code generation.
+	  [ruby-core:60688]
+
 Thu Feb 13 23:30:30 2014  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* vm_insnhelper.c (vm_call_method): should check ci->me->flag of
